[package]
name = "bevy_chess"
version = "0.1.0"
authors = ["guimcaballero <guim@caballerocoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5" }
bevy_mod_picking = "0.4"
chess = "3.2.0"
bevy_rapier3d = { version = "0.9", features = [ "parallel", "simd-stable" ] }
bevy_prototype_character_controller = { git = "https://github.com/superdump/bevy_prototype_character_controller", features = ["use_rapier"] }
rand = "0.8"